Made the contact-me section mobile responsive and fixed the issue of the hamburger menu not displaying links

--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,11 @@ footer {
 	h4,
 	p {
 		text-align: center;
-    }
+	}
+	
+	.navbar button {
+		font-size: 1rem;
+	}
     
     .developer-pic {
         width: 85%;
@@ -252,5 +256,74 @@ footer {
 		width: 100%;
         margin-left: 2.5rem;
         margin-bottom: 2.5rem;
+	}
+
+	.fa-facebook {
+		color: #0e8df1;
+	}
+
+	.fa-github {
+		color: black;
+	}
+	
+	.fa-instagram {
+		color: transparent;
+		background: -webkit-radial-gradient(
+			30% 107%,
+			circle,
+			#fdf497 0%,
+			#fdf497 5%,
+			#fd5949 45%,
+			#d6249f 60%,
+			#285aeb 90%
+		);
+		background: -o-radial-gradient(
+			30% 107%,
+			circle,
+			#fdf497 0%,
+			#fdf497 5%,
+			#fd5949 45%,
+			#d6249f 60%,
+			#285aeb 90%
+		);
+		background: radial-gradient(
+			circle at 30% 107%,
+			#fdf497 0%,
+			#fdf497 5%,
+			#fd5949 45%,
+			#d6249f 60%,
+			#285aeb 90%
+		);
+		background: -webkit-radial-gradient(
+			circle at 30% 107%,
+			#fdf497 0%,
+			#fdf497 5%,
+			#fd5949 45%,
+			#d6249f 60%,
+			#285aeb 90%
+		);
+		background-clip: text;
+		-webkit-background-clip: text;
+	}
+	
+	.fa-linkedin {
+		color: #0a66c2;
+	}
+	
+	.fa-twitter {
+		color: #1da1f2;
+	}
+	
+	.fa-stack-overflow {
+		color: #f28c3a;
+	}
+
+	footer {
+		padding: 1.2rem 0;
+		font-size: 0.875rem;
+	}
+
+	.reach-padding {
+		display: none;
 	}
 }
